# Neymark_LabTracker

./: .gitignore  README.md  analysis_results.csv  data.csv  notebook.ipynb  ocr_results.json  parse_surya_prediciton.py  pyproject.toml  start_bot.sh
src/synth/generator/: __init__.py  generator.py
src/synth/latex/: template.tex
src/synth/pipeline/: augmentation.py  pipeline.py
src/tg_bot/: bot.py  config.py
src/tg_bot/handlers/: user_handlers.py
src/tg_bot/models/: analysis_models.py
src/tg_bot/services/: analysis_service.py
src/tg_bot/utils/: ocr_to_csv.py  ycloud_client.py
