[project]
name = "lab-tracker"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.11.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "opencv-contrib-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pymupdf>=1.26.5",
    "tqdm>=4.67.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true